--- a/openal_soft_bindings.csproj
+++ b/openal_soft_bindings.csproj
@@ -14,12 +14,12 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>openal;openal-soft;openal_soft;</PackageTags>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <DefaultItemExcludes>$(DefaultItemExcludes);test/**</DefaultItemExcludes>
     </PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.0.3</Version>
+		<Version>1.0.4</Version>
 		<PackageReleaseNotes>
-Created a new ALStreamSource class for streaming data to an OpenAL source (e.g. microphone input)
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
