Tests for remaining managed classes

--- a/test/openal_soft_bindings_test.csproj
+++ b/test/openal_soft_bindings_test.csproj
@@ -6,6 +6,7 @@
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<OutputType>Exe</OutputType>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
