--- a/openal_soft_bindings.csproj
+++ b/openal_soft_bindings.csproj
@@ -18,7 +18,7 @@
     </PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.0.7</Version>
+		<Version>1.0.7-alpha.1</Version>
 		<PackageReleaseNotes>Debug logging for DllImportResolver for Linux.</PackageReleaseNotes>
 	</PropertyGroup>
 
